tests/tests/errors/2000-2.vb
'#compiler-options:/r:Module.netmodule
'#compiler-message:cannot be referenced because it is not an assembly.
'#exit-code:1